testing/tests/ui/break_outside_of_loop.stderr
error: you can only `break` inside a `for` loop
 --> <source attribute>:1:10
  |
       1 | Have a {%break%}, have a parsing error!
         |          ^ close to this token
         |
 --> tests/ui/break_outside_of_loop.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
